--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pret-a-porter",
-  "version": "2.0.21",
+  "version": "2.0.22",
   "description": "Preact primitive components styled with Fela",
   "main": "lib/index.js",
   "files": [
@@ -16,11 +16,12 @@
     "test:watch": "nwb test --server"
   },
   "dependencies": {
-    "fela": "^4.3.1",
-    "fela-dom": "^4.3.1",
-    "fela-plugin-named-media-query": "^4.3.1",
-    "fela-preset-web": "^4.3.1",
-    "preact": "^7.2.0"
+    "fela": "^4.3.2",
+    "fela-dom": "^4.3.2",
+    "fela-plugin-named-media-query": "^4.3.2",
+    "fela-preset-web": "^4.3.2",
+    "preact": "^7.2.0",
+    "preact-fela": "^4.3.2"
   },
   "devDependencies": {
     "nwb": "0.15.x"
