--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "pret-a-porter",
-  "version": "2.0.22",
+  "version": "2.1.0",
   "description": "Preact primitive components styled with Fela",
   "main": "lib/index.js",
+  "module": "es/index.js",
   "files": [
     "es",
     "lib",
@@ -21,7 +22,8 @@
     "fela-plugin-named-media-query": "^4.3.2",
     "fela-preset-web": "^4.3.2",
     "preact": "^7.2.0",
-    "preact-fela": "^4.3.2"
+    "preact-fela": "^4.3.2",
+    "pret-a-porter": "^2.0.22"
   },
   "devDependencies": {
     "nwb": "0.15.x"
